[package]
name = "rust-examples"
version = "0.1.0"
authors = ["cody koeninger <cody@koeninger.org>"]

[[bin]]
name = "hello"
path = "src/hello.rs"

[[bin]]
name = "nullptr"
path = "src/nullptr.rs"

[[bin]]
name = "ownership"
path = "src/ownership.rs"

[[bin]]
name = "datarace"
path = "src/datarace.rs"

[[bin]]
name = "newtype"
path = "src/newtype.rs"

[[bin]]
name = "macros"
path = "src/macros.rs"
